--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,18 @@
     font-size: 54px;
     font-weight: bold;
 }
-
-.hero-section .input-group {
-    max-width: 500px; /* Adjust as needed */
+.hoverForContentBox {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
+.hoverForContentBox:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
 /* Slider Styling */
 .carousel {
     border-radius: 10px;
     overflow: hidden;
 }
-
 .sliderImg{
     height:450px;
 }
@@ -22,7 +23,6 @@
     /* width: 100%; */
     object-fit:fill;
 }
-
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
     background-color: rgba(0, 0, 0, 0.5);
@@ -38,18 +38,15 @@
     border-radius: 10px;
     margin-bottom: 20px;
 }
-
 .movie-card img {
     width: 100%;
     height: 250px;
     display: block;
     transition: transform 0.3s ease;
 }
-
 .movie-card:hover img {
     transform: scale(1.06); /* Zoom effect on hover */
 }
-
 .card-body {
     position: absolute;
     top: 0;
@@ -58,11 +55,9 @@
     opacity: 0; 
     transition: opacity 0.3s ease;
 }
-
 .movie-card:hover .card-body {
     opacity: 1; /* Show on hover */
 }
-
 .rating {
     position: absolute;
     top: 10px;
@@ -87,8 +82,6 @@
     margin-right: 5px;
 }
 /* movie section end */
-
-
 
 @media (max-width: 768px) {
     .heroSection{
