--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,37 @@
     opacity: 1;
 }
 /* for favorite button code end here  */
+
+/* .pagination-container start */
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.pagination-container button {
+    border: 1px solid white;
+    color: white;
+    background-color: rgb(39, 39, 38);
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.pagination-container button:hover {
+    background-color: #e50914;
+    color: #fff;
+}
+
+.pagination-container button.active {
+    background-color: #e50914;
+    color: #fff;
+    font-weight: bold;
+    pointer-events: none;
+}
+/* .pagination-container end */
 /* movie section end */
 
 /* responsive code from here  */
